<resources>
    <string name="app_name">Colombus Dagbook</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list_tasks">ListTasksActivity</string>
    <string name="title_activity_add_task">AddTaskActivity</string>
    <string name="title_activity_edit_task">EditTaskActivity</string>
    <string name="title_activity_map">Map</string>







    <string name="title_activity_show_geofence_transitions">ShowGeofenceTransitionsActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Buttons strings -->
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>

    <!-- Error strings -->
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">Click notification to return to app</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="show_map_btn">Show Map</string>
    <string name="task_list">Task List</string>
    <string name="help_btn">Help</string>
    <string name="location">Place :</string>
    <string name="save_btn">Save</string>
    <string name="english_button">English</string>
    <string name="sinhala_button">සිංහල</string>
    <string name="description">Details :</string>
    <string name="id">ID : </string>
    <string name="french_button">French</string>
    <string name="t1">1. Add a preferred location on the map from show map tab</string>
    <string name="t2">2. Add place name and details.</string>
    <string name="t3">3. View location details on the task list.</string>
    <string name="t4">4. Get notification when crossing a geofence.</string>
</resources>
