<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.kapal.root.colombusdagbook.HelpActivity"
    android:background="@drawable/bg">

    <Button
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:text="@string/show_map_btn"
        android:id="@+id/show_map_btn"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_weight="1"/>

    <Button
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:text="@string/task_list"
        android:id="@+id/task_lst_btn"
        android:layout_alignTop="@+id/show_map_btn"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:text="@string/help_btn"
        android:id="@+id/help_btn"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/t1"
        android:id="@+id/help_text_1"
        android:layout_toStartOf="@+id/help_btn"
        android:layout_below="@+id/show_map_btn"
        android:layout_alignRight="@+id/help_btn"
        android:layout_alignEnd="@+id/help_btn"
        android:textColor="#ff1a0f1d"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/t2"
        android:id="@+id/help_text_2"
        android:layout_below="@+id/help_text_1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ff1a0f1d"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/t3"
        android:id="@+id/help_text_3"
        android:layout_below="@+id/help_text_2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ff1a0f1d"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/t4"
        android:id="@+id/help_text_4"
        android:layout_below="@+id/help_text_3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ff1a0f1d"
        android:textSize="20sp" />
</RelativeLayout>
