<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.kapal.root.colombusdagbook.EditTaskActivity"
    android:background="@drawable/bg">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id_edit_task"
        android:textSize="20sp"
        android:layout_alignTop="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:textColor="#ff193685" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/location_edit_task"
        android:textSize="20sp"
        android:layout_above="@+id/textView4"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:textColor="#ff193685" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/description_edit_task"
        android:layout_alignTop="@+id/textView4"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:textSize="20sp"
        android:textColor="#ff193685" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/latitude_edit_task"
        android:textSize="20sp"
        android:layout_below="@+id/description_edit_task"
        android:layout_alignLeft="@+id/description_edit_task"
        android:layout_alignStart="@+id/description_edit_task"
        android:textColor="#ff193685" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/longtitude_edit_task"
        android:textSize="20sp"
        android:layout_below="@+id/description_edit_task"
        android:layout_alignLeft="@+id/help_btn"
        android:layout_alignStart="@+id/help_btn"
        android:textColor="#ff193685" />

    <Button
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:text="@string/show_map_btn"
        android:id="@+id/show_map_btn"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_weight="1"/>

    <Button
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:text="@string/task_list"
        android:id="@+id/task_lst_btn"
        android:layout_alignTop="@+id/show_map_btn"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        />

    <Button
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:text="@string/help_btn"
        android:id="@+id/help_btn"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:id="@+id/textView"
        android:layout_below="@+id/show_map_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp"
        android:textSize="20sp"
        android:textColor="#ff19060b" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:id="@+id/textView3"
        android:layout_marginTop="56dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:textColor="#ff19060b" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:id="@+id/textView4"
        android:layout_marginTop="64dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:textColor="#ff19060b" />

</RelativeLayout>
