
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.kapal.root.colombusdagbook.MapActivity"
    android:background="@drawable/bg">

<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:id="@+id/map"
    tools:context="com.kapal.root.colombusdagbook.MapActivity"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_alignParentBottom="true"
    android:layout_below="@+id/show_map_btn" />

    <Button
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:text="@string/show_map_btn"
        android:id="@+id/show_map_btn"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_weight="1" />

    <Button
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:text="@string/task_list"
        android:id="@+id/task_lst_btn"
        android:layout_alignBottom="@+id/show_map_btn"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"/>

    <Button
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:text="@string/help_btn"
        android:id="@+id/help_btn"
        android:layout_alignBottom="@+id/task_lst_btn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />


</RelativeLayout>



